--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -13,7 +13,7 @@
     "admin.login.theme.title": "Choose the theme you want to use",
     "admin.login.theme.description": "If you want to see them in action, please go to <a href=\"%s\" target=\"_blank\">your profile</a> page and customize your current admin theme.",
     "admin.login.url.title": "Custom login page URL",
-    "admin.login.url.description": "Define a custom login page URL instead of the very known <code>wp-login</code> slug.",
+    "admin.login.url.description": "Define a custom login page URL instead of the very known <code>wp-login.php</code>.",
     "admin.login.error.title": "Use Artemis custom error message to increase your security?",
     "admin.login.error.description": "Whatever the error, the message \"%s\" will be displayed.",
     "admin.login.headertitle.title": "Header title",
